--- a/about.html
+++ b/about.html
@@ -3,15 +3,18 @@
 <head>
 <meta charset="utf-8">
 <title> HOME   |   W3C cafe</title>
+<link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body>
+<body id="wrapper">
+<div id="main2" >
 <h1><img src="images/logo.png" alt="W3C cafe" width="249" height="107"></h1>
+<nav>
 <ul>
-	<li><a href="menu.html">menu</a></li>
-	<li><a href="location.html">location</a></li>
+	<li><a href="index.html">menu</a></li>
 	<li><a href="about.html">about us</a></li>
 	<li><a href="recruit.html">recruit</a></li>
 </ul>
+</nav>
 <h2>About us</h2>
 <h3>History</h3>
 <table border="1">
@@ -32,8 +35,10 @@
     <td>W3C cafe opens online stores</td>
   </tr>
 </table>
-
-<p>Copyright © 2011 W3C cafe</p>
+<footer>
+<p>Copyright © 2020 W3C cafe</p>
+</footer>
+</div>
 </body>
 </html>
 
