--- a/recruit.html
+++ b/recruit.html
@@ -5,15 +5,16 @@
 <title> HOME   |   W3C cafe</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body  id="main2">
-<div id="wrapper">
+<body id="wrapper">
+<div id="main2">
 <h1><img src="images/logo.png" alt="W3C cafe" width="249" height="107"></h1>
+<nav>
 <ul>
-	<li><a href="menu.html">menu</a></li>
-	<li><a href="location.html">location</a></li>
+	<li><a href="index.html">menu</a></li>
 	<li><a href="about.html">about us</a></li>
 	<li><a href="recruit.html">recruit</a></li>
 </ul>
+</nav>
 <h2>Recruit</h2>
 <h3>Apprications</h3>
 <form action="http://www.example.com/form.cgi" method="get">
@@ -44,7 +45,7 @@
 </table>
 </form>
 <footer>
-<p>Copyright © 2011 W3C cafe</p>
+<p>Copyright © 2020 W3C cafe</p>
 </footer>
 </div>
 </body>
