--- a/index.html
+++ b/index.html
@@ -5,15 +5,12 @@
 <title> HOME   |   W3C cafe</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body id="main">
-<div id="wrapper">
-<header>
+<body id="wrapper">
+<div id="main2" >
 <h1><img src="images/logo.png" alt="W3C cafe" width="249" height="107"></h1>
-</header>
 <nav>
 <ul>
-	<li><a href="menu.html">menu</a></li>
-	<li><a href="location.html">location</a></li>
+	<li><a href="index.html">menu</a></li>
 	<li><a href="about.html">about us</a></li>
 	<li><a href="recruit.html">recruit</a></li>
 </ul>
@@ -22,7 +19,7 @@
   <article>
     <header>
       <h2>new branch</h2>
-      <p class= "date" >26 January 2011</p>
+      <p class= "date" >23 April 2020</p>
     </header>
     <p>text text text text text text text text text text
 text text text text text text text text text text
@@ -49,7 +46,7 @@ text text text text text text text text text text</p>
   </article>
 </article>
 <footer>
-<p>Copyright © 2011 W3C cafe</p>
+<p>Copyright © 2020 W3C cafe</p>
 </footer>
 </div>
 </body>
